  * softwarecenter/db/database.py,
    test/test_appview.py:
    - import Application from the correct location
  
  [ Michael Vogt ]
  * merged lp:~mpt/software-center/fit-and-finish, many thanks
  * merged lp:~mmcg069/software-center/mkit-theme-tweaks, many thanks
  * merged lp:~and471/software-center/a-few-of-my-favorite-things, many
    thanks

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 13 Aug 2010 16:46:13 +0200

software-center (2.1.10) maverick; urgency=low

  [ Kiwinote ]
  * data/featured.menu.in:
    - fix typos to make a few more featured apps appear in the list
  * po/POTFILES.in:
    - mark softwarecenter/db/application.py for translation
  * softwarecenter/app.py:
    - switch to available view when we are in the installed view and we get a
      request for a pkg in the available view
    - allow s-c to be passed a search term (LP: #612507)
      The syntax is "software-center search:search term"
    - make catalog rebuilding window accessible (LP: #538373)
  * softwarecenter/db/database.py:
    - fix typo (LP: #616183)
  * softwarecenter/view/appdetailsview_gtk.py:
    - use the same gwibber text in both appdetails views (LP: #614220)
    - make application name and summary accessible and grab focus (LP: #608140)
    - make description accessible (LP: #608140)
    - make info table accessible (LP: #608141)
    - reset pane to top left on show_app()
  * softwarecenter/view/appdetailsview_webkit.py:
    - use the same gwibber text in both appdetails views (LP: #614220)
  * softwarecenter/view/availablepane.py:
    - refresh navigation bar correctly when we get a request to display a pkg
  * softwarecenter/view/catview_gtk.py:
    - make poster and paging dot accessible (LP: #600306, #608152, #609411)
  * softwarecenter/view/installedpane.py:
    - refresh navigation bar correctly when we get a request to display a pkg
  * softwarecenter/view/pendingview.py:
    - display the name of the application holding the lock, when waiting for